kubernetes/applications/matrix/element/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: element
  namespace: matrix
  labels:
    app.kubernetes.io/name: element
    app.kubernetes.io/part-of: matrix
spec:
  type: ClusterIP

  selector:
    app.kubernetes.io/name: element

  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
