kubernetes/applications/matrix/element/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: element
  namespace: matrix
  labels:
    app.kubernetes.io/name: element
    app.kubernetes.io/part-of: matrix
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: everlab-gateway
      namespace: gateway

  hostnames:
    - element.prod.everlab.dev

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /

      backendRefs:
        - group: ""
          kind: Service
          name: element
          port: 8080
          weight: 1
